[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "update-plex"
authors = [
    {name = "George Hickman", email = "george@ghickman.co.uk"},
]
description='Tell your Plex TV library to update'
version = "1.3.0"
dependencies = [
    "click",
    "requests",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
]

[project.scripts]
update_plex = "update_plex:run"

[project.urls]
Source = "https://github.com/ghickman/update_plex"
